# pipx_bug

./: README.md  pyproject.toml
pipx_bug/: cli.py
