[tool.poetry]
name = "pipx_bug"
version = "0.1.0"
description = ""
authors = ["Altynbek Orumbayev <altynbek.orumbayev@makerx.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
copier = "^9.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pipx-bug-cli = "pipx_bug.cli:hello"
